--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
     background: var(--tile-bg);
     border-radius: 8px;
     box-shadow: 0 2px 10px var(--tile-shadow);
-    padding: 20px;
     position: relative;
     color: var(--text-color);
+    aspect-ratio: 1 / 1; /* Start as a square */
+    padding: 20px; /* Optional: you can adjust or remove this */
   }
+  
   .tile h2 {
     margin: 0 0 10px;
     font-size: 1.2em;
