--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
 
 <script>
   // Constants for API keys
-  const WEATHER_API_KEY = "YOUR_OPENWEATHER_API_KEY"; // Replace with real key
-  const FINNHUB_API_KEY = "YOUR_FINNHUB_API_KEY";     // Replace with real key
+  const WEATHER_API_KEY = "33dfd53a9d3d81f2922261c29bc94c06"; // Replace with real key
+  const FINNHUB_API_KEY = "ctcpibpr01qlc0uvah90ctcpibpr01qlc0uvah9g";     // Replace with real key
 
   // Load theme from localStorage
   const savedTheme = localStorage.getItem("dashboardTheme");
